# deal-lens

./: .gitignore  AGENTS.md  README.md  api.env.example  example.api.env  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
analysis/: analysis_utils.py  kbb.py  level1.py  level1_confidence.py  level1_kbb.py  level1_market.py  level1_models.py  level1_report.py  level2.py  level3.py  normalization.py  reporting.py  scoring.py  workflow.py
deal_lens/: __init__.py  __main__.py  cli.py  cli_support.py  config.py
docs/: visor-api-migration.md
templates/: level1_market.css  level1_market.html  level2.css  level2.html
tests/: conftest.py
tests/unit/: test_cli_api_routing.py  test_config.py  test_download.py  test_kbb.py  test_level1_cache.py  test_level1_confidence.py  test_level1_kbb.py  test_level1_market.py  test_level1_models.py  test_level1_query.py  test_level1_report.py  test_level1_service.py  test_level2_api_integration.py  test_level2_cache.py  test_level2_eligibility.py  test_level2_scoring.py  test_level2_scraper_integration.py  test_level2_service.py  test_scraper_api_routing.py  test_visor_adapter.py  test_visor_api_boundary.py  test_visor_cache.py  test_visor_client.py  test_visor_models.py  test_visor_query.py  test_visor_recorded_fixtures.py
utils/: cache.py  dealcheck.py  download.py  models.py
visor_api/: __init__.py  adapter.py  cache.py  client.py  level1_cache.py  level1_query.py  level1_service.py  level1_types.py  level2_cache.py  level2_service.py  models.py  query.py
visor_scraper/: __main__.py  helpers.py  scraper.py
(+20 files in other folders)
