[project]
name = "deal-lens"
version = "0.3.0"
description = "Data-driven vehicle market, listing, and negotiation reports"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
deal-lens = "deal_lens.cli:main"
kbb_collect = "analysis.kbb_collector:main"
level1 = "analysis.level1:main"
level2 = "analysis.level2:main"
level3 = "analysis.level3:main"
download = "utils.download:main"

[tool.setuptools.packages.find]
where = ["."]
